--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "PassFF",
     "version": "_VERSIONHOLDER_",
-    "description": "Integrates your zx2c4 password store into Firefox",
+    "description": "Integrates your zx2c4 password store into Firefox (modified by Oleg Pyhalov <pyhalov@majordomo.ru>)",
     "default_locale": "en",
 
     "icons": {
